[project]
name = "wiz-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "chromedriver-autoinstaller>=0.6.4",
    "datasets>=3.2.0",
    "html2text>=2024.2.26",
    "motor>=3.7.0",
    "numpy>=2.2.3",
    "pydantic-ai>=0.0.24",
    "pydantic>=2.10.6",
    "qdrant-client>=1.13.2",
    "selenium>=4.28.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "webdriver-manager>=4.0.2",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "logfire>=3.5.3",
    "pydantic-settings>=2.7.1",
    "langchain>=0.3.19",
    "langchain-community>=0.3.17",
    "notion-client>=2.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["wiz_ai"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
